<resources>
    <string name="app_name">BidButler</string>
    <string name="no_account_yet_create_one">SIGN UP</string>
    <string name="email">Email</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="facebook_app_id">633724556807673</string>

    <string name="login_activity_lable">LOGIN</string>
    <string name="sign_up_activity_lable">SIGN UP</string>
    <string name="settings_label">User Profile</string>
    <string name="taskpage_label">Task</string>

    <string name="fb_login_protocol_scheme">fb633724556807673</string>

    <string name="sign_up_warning">Warning: This app is in alpha and does not currently support payments.</string>

    <!-- All following Strings are related to Profile Activity-->
    <string name="action_logout">Log out</string>
    <string name="user_profile">Profile</string>
    <string name="title_activity_profile">Available Tasks</string>
    <string name="toggle_filter_text">Show/Hide Filters</string>
    <string name="search_distance">Distance(km)</string>
    <string name="search_tags">Tags</string>
    <string name="search_non_local_task">Show Non-local Tasks</string>
    <string name="search_local_task">Show Local Tasks</string>
    <string name="apply_filter_changes">Apply Changes</string>
    <string name="date_choose_button">Choose</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="request_new_password">Request New Password</string>

    <!-- All String in Following Block are related to ForgotPassWord -->
    <string name="password_reset_instruction">Please Enter your Email Address. Password Reset Instruction will be sent to your email</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="missing_information">Missing Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>

    <!-- Nav bar -->
    <string name="asbidder_active">Your Bids (live)</string>
    <string name="asbidder_current">Current Tasks</string>
    <string name="asbidder_history">Bid History</string>

    <string name="ascreator_active">Your Tasks (live)</string>
    <string name="ascreator_pickwin">Pick Task Winner</string>
    <string name="ascreator_current">Current Tasks</string>
    <string name="ascreator_history">Task History</string>
    <string name="list_of_bidder">List Of Bidder</string>
    <string name="nav_timeline">Timeline</string>
    <string name="complete_task">Complete Task</string>
    <string name="report_task">Report Task</string>

    <!-- Reward titles -->
    <string name="reward_unknown">UNKNOWN</string>
    <string name="reward_novice">NOVICE</string>
    <string name="reward_revered">REVERED</string>
    <string name="reward_master">MASTER</string>
    <string name="reward_elite">ELITE</string>
    <string name="reward_emperor">EMPEROR</string>

    <!-- Task it now info -->
    <string name="taskitnowinfomessage">Please wait for confirmation from the creator.</string>


</resources>
