<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/missing_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alertDialog_TextView_missing_information"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/alertDialog_EditText_FirstName"
            android:hint="@string/first_name"
            android:layout_margin="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/alertDialog_EditText_LastName"
            android:hint="@string/last_name"
            android:layout_margin="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/alertDialog_EditText_PhoneNumber"
            android:hint="@string/phone_number"
            android:layout_margin="7dp" />

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alertDialog_Button_Update"
            android:layout_margin="10dp"
            android:layout_gravity="center" />
    </LinearLayout>



</ScrollView>
